# state-estimation

./: CMakeLists.txt  main.cpp
include/: KalmanFilter.hpp  Robot.hpp  SensorStruct.hpp  SystemDynamics.hpp  TwoDimBot.hpp  common.h
src/: KalmanFilter.cpp  Robot.cpp  SystemDynamics.cpp
